Add mirror effect

--- a/src/content/getusermedia/filter/index.html
+++ b/src/content/getusermedia/filter/index.html
@@ -32,6 +32,11 @@
             filter: none;
         }
 
+        .mirror {
+            -webkit-transform: scale(-1, 1);
+            transform: scale(-1, 1);
+        }
+
         .blur {
             -webkit-filter: blur(3px);
             filter: blur(3px);
@@ -75,6 +80,7 @@
     <label for="filter">Filter: </label>
     <select id="filter">
         <option value="none">None</option>
+        <option value="mirror">Mirror</option>
         <option value="blur">Blur</option>
         <option value="grayscale">Grayscale</option>
         <option value="invert">Invert</option>
